fix landing page background not showing

--- a/css/main.css
+++ b/css/main.css
@@ -782,7 +782,7 @@ html {
 }
 
 .landing-page {
-  background: url("../assets/animation/landing-page-background.gif");
+  background: url("../assets/animation/Landing-page-background.gif");
   background-size: cover;
   background-position: center;
   max-width: 100%;
