--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 .landing-page{
-    @include backgroundCover("../assets/animation/landing-page-background.gif");
+    @include backgroundCover("../assets/animation/Landing-page-background.gif");
 
     max-width: 100%;
     height: 130vh;
